<resources>
    <string name="app_name">My Expenses</string>
    <string name="app_income">Add Income</string>
    <string name="app_expense">Add Expense</string>
    <string name="app_viewAll">View All</string>
    <string name="app_viewAll_Income">View All Income</string>
    <string name="app_viewAll_Expense">View All Expenses</string>
    <string name="app_about">About</string>
    <string name="app_settings">Settings</string>

    <string name="action_settings">Close</string>

    <string name="m_income">Monthly income: </string>
    <string name="m_expense">Monthly expense: </string>
    <string name="m_balance">Monthly balance: </string>
    <string name="t_income">Total income: </string>
    <string name="t_expense">Total expense: </string>
    <string name="t_balance">Total balance: </string>
    <string name="t_set">Set</string>


    <string name="b_food">Food</string>
    <string name="b_medical">Medical</string>
    <string name="b_travel">Travel</string>
    <string name="b_stat">Stationary</string>
    <string name="b_ent">Entertainment</string>
    <string name="b_shopping">Shopping</string>
    <string name="b_income">Income</string>
    <string name="b_calender"> > </string>
    <string name="b_ok">OK</string>
    <string name="b_new">OK and New</string>
    <string name="b_cancel">Cancel</string>
    <string name="b_deleteAll">Delete All</string>
    <string name="b_delete">Delete</string>
    <string name="b_view_all">View All</string>
    <string name="b_about">About</string>
    <string name="b_settings">Settings</string>
    <string name="b_rate">Rate App</string>
    <string name="b_Share">Share</string>


    <string name="text_date">Date: </string>
    <string name="text_item">Item name: </string>
    <string name="text_amount">Amount: </string>
    <string name="text_category">Category: </string>
    <string name="text_method">Payment method: </string>
    <string name="text_description">Description: </string>
    <string name="text_viewall">All records up to date: </string>
    <string name="text_about">  This app helps you to
        organize your expenses in a proper way. It reduces the
        overhead of maintaining our expenses in a diary or note book
        and tracking at the end of the month. By using this app we can
        track the expenses easily based on different options such as
        Category, Date, Month, Year, and Payment Method in a simple way. </string>


    <string-array name="payment_method_array">
        <item>Cash</item>
        <item>Cheque</item>
        <item>Credit Card</item>
        <item>Debit</item>
        <item>Electronic Transfer</item>
    </string-array>

    <string-array name="category_array">
        <item>Food</item>
        <item>Medical</item>
        <item>Entertainment</item>
        <item>Groceries</item>
        <item>Travel</item>
        <item>Stationary</item>
        <item>Lone</item>
        <item>Other</item>
    </string-array>

</resources>
