<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_date"
            android:id="@+id/textDate" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_date"
            android:id="@+id/EditDate" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/b_calender"
            android:textSize="30sp"
            android:id="@+id/bCalender"
            android:onClick="onCalender" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_amount"
            android:id="@+id/textAmount" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="@dimen/layout_margin"
            android:id="@+id/editTextAmount"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_item"
            android:id="@+id/textItemName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:id="@+id/editTextItemName"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_method"
            android:id="@+id/textView" />

        <Spinner
            android:id="@+id/spinner_payment_method"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textSize="30sp"
            android:background="#e0ceff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_description"
            android:id="@+id/textViewDescription" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:id="@+id/editTextDescription"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/b_cancel"
            android:textSize="30sp"
            android:id="@+id/bCancel"
            android:onClick="onCancel" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/b_delete"
            android:textSize="30sp"
            android:id="@+id/bOkNew"
            android:onClick="onDeleteEx" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/b_ok"
            android:textSize="30sp"
            android:id="@+id/bOk"
            android:onClick="onOk" />
    </LinearLayout>

</LinearLayout>
